color change of edit

--- a/style/style.css
+++ b/style/style.css
@@ -471,7 +471,7 @@ label .arrow-up { display: none; }
   cursor: pointer;
 }
 .fakelink:hover {
-  color: #048c36;
+  color: #042860;
 }
 .checkContainer {
   background-color: #eff0f2;
